syntax = "proto3";
option go_package = "./;protodef";
package ambient.protodef;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

service FuncMapper {
    rpc Do(FuncMapperDoRequest) returns (FuncMapperDoResponse) {}
}

message FuncMapperDoRequest {
    string requestid = 1;
    string key = 2;
    repeated google.protobuf.Any params = 3;
    string method = 4;
    string path = 5;
    google.protobuf.Struct headers = 6;
    bytes body = 7;
}

message FuncMapperDoResponse {
    google.protobuf.Any value = 1;
    repeated google.protobuf.Struct arr = 2;
}